--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,19 +23,17 @@ body {
     overflow: hidden;
 }
 
-/* Background image stays in this layer */
 .background-img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../img/sander-weeteling-KABfjuSOx74-unsplash.jpg");
     background-size: cover;
     background-position: center;
     z-index: 0;
     opacity: 1;
-    /* Full image, adjust if needed */
+    transition: background-image 1s ease-in-out;
 }
 
 /* Quote container */
